@@ -36,23 +36,31 @@ jmh {
     timeUnit = 'ms'
     benchmarkMode = ['avgt']
 
-    jvmArgs.addAll(['-Xms512M', '-Xmx2G',
-                    '-server',
+
+    jvmArgs.addAll(['-Xms256M', '-Xmx512M',
                     '-XX:+UnlockExperimentalVMOptions', '-XX:+UnlockDiagnosticVMOptions',
-                    '-XX:+UseParallelGC', '-XX:+DisableExplicitGC', '-XX:-UseGCOverheadLimit',
-                    '-XX:+TieredCompilation', '-XX:CompileThreshold=1', '-XX:MaxInlineSize=64',
+                    '-XX:-UseGCOverheadLimit', '-XX:ReservedCodeCacheSize=256M',
+                    '-server', '-XX:+TieredCompilation',
+                    '-XX:MaxInlineSize=64', '-XX:FreqInlineSize=450', '-XX:MaxInlineLevel=20',
                     '-XX:+UseCompressedOops', '-XX:+UseStringDeduplication', '-XX:+OptimizeStringConcat',
                     '-XX:+AlwaysPreTouch',
                     '-XX:+CrashOnOutOfMemoryError', '-XX:+HeapDumpOnOutOfMemoryError',
                     '-Dsun.stdout.encoding=UTF-8', '-Dsun.stderr.encoding=UTF-8'])
-    if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_1_8)) {
-        jvmArgs += '-XX:+TieredCompilation'
-    }
     if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_1_9)) {
         jvmArgs += '-XX:+UseFastAccessorMethods'
     }
     if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_13)) {
         jvmArgs += '-XX:+AggressiveOpts'
+    }
+
+    if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_12)) {
+    } else if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
+        jvmArgs += ' -XX:+UseShenandoahGC'
+    } else if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_21)) {
+        jvmArgs += '-XX:+UseZGC'
+        if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_21)) {
+            jvmArgs += '-XX:+ZGenerational'
+        }
     }
 
     jmhVersion = '1.37'
